Přidán endpoint pro smazání review
